# mindtune-brainwave

./: .gitignore  README.md  all_sessions_eeg_with_markers.csv  analysis_notebook.ipynb  collector_ui.py  debug_features.py  eeg_analysis.ipynb  emotion_detector_ui.py  featured_analysis.ipynb  main.py  mindtune_eda.ipynb  mindtune_full_eeg_data.csv  prediction.py  pyproject.toml  scaler.pkl  scaler88.pkl  session_summary.csv  test_ui_predictions.py  trainer.py
.ipynb_checkpoints/: analysis_notebook-checkpoint.ipynb  featured_analysis-checkpoint.ipynb
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
sessions/S20260324_213539/: eeg_rows.csv  markers.csv  session_meta.json
