[project]
name = "mindtune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "joblib>=1.5.3",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.1",
    "pypdf>=6.9.0",
    "pyserial>=3.5",
    "scikit-learn>=1.6.1,<1.7",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
]
